--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,53 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.layout.*?>
+
+<AnchorPane fx:id="MainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F2F5A9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <AnchorPane fx:id="tablePane" layoutX="615.0" layoutY="14.0" prefHeight="445.0" prefWidth="176.0">
+         <children>
+            <TableView fx:id="tblCoordinate" prefHeight="268.0" prefWidth="232.0" style="-fx-background-color: F2F5A9;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="X" />
+                <TableColumn prefWidth="75.0" text="Y" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="addCoordinatePane" layoutX="632.0" layoutY="463.0" prefHeight="140.0" prefWidth="142.0">
+         <children>
+            <Button fx:id="btnAdd" layoutX="36.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#addAction" text="Ekle" />
+            <Button fx:id="btnDel" layoutX="81.0" layoutY="100.0" mnemonicParsing="false" onAction="#deleteAction" prefHeight="25.0" prefWidth="38.0" text="Sil" />
+            <Label layoutX="22.0" layoutY="35.0" text="X : " />
+            <Label layoutX="21.0" layoutY="68.0" text="Y : " />
+            <TextField fx:id="txtX" layoutX="43.0" layoutY="31.0" prefHeight="25.0" prefWidth="68.0" />
+            <TextField fx:id="txtY" layoutX="43.0" layoutY="64.0" prefHeight="25.0" prefWidth="68.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="552.0" prefWidth="599.0">
+         <children>
+            <ScatterChart fx:id="coordinateChart" animated="false" prefHeight="562.0" prefWidth="620.0">
+               <xAxis>
+                  <NumberAxis label="mm" prefHeight="37.0" prefWidth="531.0" side="BOTTOM" upperBound="200.0" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis label="mm" prefHeight="486.0" prefWidth="41.0" side="LEFT" upperBound="200.0" />
+               </yAxis>
+            </ScatterChart>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="7.0" layoutY="553.0" prefHeight="41.0" prefWidth="604.0">
+         <children>
+            <Button fx:id="btnLoad" layoutX="74.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="142.0" text="Yükle" />
+            <Button fx:id="btnSave" layoutX="231.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="142.0" text="Kaydet" onMouseClicked="#saveFile"  />
+            <Button fx:id="btnSend" layoutX="389.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="142.0" text="Gönder" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
